polls도 View class로 변경
View class로 view를 보여주도록 변경. 하지만 post로 보내는 vote의 경우에는 여전히
method로 보여준다. 꽤 재밌음. 앞으로 가야할 길이 멀지만 서버로 하기에 좋아보임.

--- a/books/templates/books/author_detail.html
+++ b/books/templates/books/author_detail.html
@@ -2,5 +2,5 @@
 {% block content %}
   <h1>{{ object.name }}</h1>
   <p>{{ object.salutation }}</p>
-  <li>Email: {{ obejct.email }}</li>
+  <li>Email: {{ object.email }}</li>
 {% endblock content %}
