--- a/books/templates/books/publisher_detail.html
+++ b/books/templates/books/publisher_detail.html
@@ -2,5 +2,5 @@
 {% block content %}
   <h1>{{ object.name }}</h1>
   <p>{{ object.website }}</p>
-  <li>Address: {{ obejct.address }}</li>
+  <li>Address: {{ object.address }}</li>
 {% endblock content %}
