--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,3 +1,6 @@
+{% extends "base_polls.html" %}
+
+{% block content %}
 <h1> {{question.question_text}} </h1>
 
 {% if error_message %}
@@ -14,3 +17,4 @@
     {% endfor %}
     <input type="submit" value="Vote"/>
 </form>
+{% endblock %}
