--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,18 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>web server with python</title>
-</head>
-<body>
-    <h1>으하하하하하</h1>
-{% if latest_question_list %}
+{% extends "base_polls.html" %}
+
+{% block content %}
+  <h2>으하하하하</h2>
+  {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
-        <li><a href="/polls/{{ question.id }}/">{{question.question_text}}</a></li>
+      <li><a href="/polls/{{ question.id }}/">{{question.question_text}}</a></li>
     {% endfor %}
     </ul>
-{% else %}
+  {% else %}
     <p>No polls are available.</p>
-{% endif %}
-</body>
-</html>
+  {% endif %}
+
+{% endblock %}
