--- a/templates/base.html
+++ b/templates/base.html
@@ -1,24 +1,53 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    {% load static %}
-    <link rel="stylesheet" href="{% static "admin/css/base.css" %}" />
-    <title>{% block title %} My Amazing Site {% endblock %}</title>
-  </head>
-  <body>
-    <div id="sidebar">
-      {% block sidebar %}
-      <ul>
-        <li><a href="/">Project Home</a></li>
-        <li><a href="/admin/">Admin</a></li>
-      </ul>
-      {% endblock %}
-      <br />
-    </div>
+<head>
 
-    <div id="content">
-      {% block content %}
-      {% endblock %}
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'yeojoy/css/shop-homepage.css' %}"/>
+    <link rel="stylesheet" href="{% static 'yeojoy/css/bootstrap.min.css' %}"/>
+
+    <title>{% block title %} My Amazing Site {% endblock %}</title>
+</head>
+<body>
+<div id="sidebar" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Django App.</a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                {% block sidebar %}
+                <li>
+                    <a href="/">Project Home</a>
+                </li>
+                <li>
+                    <a href="/admin/">Admin</a>
+                </li>
+                {% endblock %}
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
     </div>
-  </body>
+    <br/>
+</div>
+
+<div id="content" class="container">
+    {% block content %}
+    {% endblock %}
+</div>
+</body>
 </html>
